Update <hgroup> children after first <h#> to <p>, ref. new HTML standard

--- a/src/epub/text/philip-of-pokanoket.xhtml
+++ b/src/epub/text/philip-of-pokanoket.xhtml
@@ -10,7 +10,7 @@
 			<header>
 				<hgroup>
 					<h2 epub:type="title">Philip of Pokanoket</h2>
-					<h3 epub:type="subtitle">An <span epub:type="z3998:nationality">Indian</span> Memoir</h3>
+					<p epub:type="subtitle">An <span epub:type="z3998:nationality">Indian</span> Memoir</p>
 				</hgroup>
 				<blockquote epub:type="epigraph z3998:poem">
 					<p>
