--- a/src/epub/text/rip-van-winkle.xhtml
+++ b/src/epub/text/rip-van-winkle.xhtml
@@ -10,7 +10,7 @@
 			<header>
 				<hgroup>
 					<h2 epub:type="title">Rip Van Winkle</h2>
-					<h3 epub:type="subtitle">A Posthumous Writing of Diedrich Knickerbocker</h3>
+					<p epub:type="subtitle">A Posthumous Writing of Diedrich Knickerbocker</p>
 				</hgroup>
 				<blockquote epub:type="epigraph z3998:poem">
 					<p>
