--- a/src/epub/text/the-boars-head-tavern-eastcheap.xhtml
+++ b/src/epub/text/the-boars-head-tavern-eastcheap.xhtml
@@ -10,7 +10,7 @@
 			<header>
 				<hgroup>
 					<h2 epub:type="title">The Boar’s Head Tavern, Eastcheap</h2>
-					<h3 epub:type="subtitle">A Shakespearian Research</h3>
+					<p epub:type="subtitle">A Shakespearian Research</p>
 				</hgroup>
 				<blockquote epub:type="epigraph">
 					<p>“A tavern is the rendezvous, the exchange, the staple of good fellows. I have heard my great-grandfather tell, how his great-great-grandfather should say, that it was an old proverb when his great-grandfather was a child, that ‘it was a good wind that blew a man to the wine.’ ”</p>
