--- a/src/epub/text/the-mutability-of-literature.xhtml
+++ b/src/epub/text/the-mutability-of-literature.xhtml
@@ -10,7 +10,7 @@
 			<header>
 				<hgroup>
 					<h2 epub:type="title">The Mutability of Literature</h2>
-					<h3 epub:type="subtitle">A Colloquy in Westminster Abbey</h3>
+					<p epub:type="subtitle">A Colloquy in Westminster Abbey</p>
 				</hgroup>
 				<blockquote epub:type="epigraph z3998:poem">
 					<p>
