--- a/src/epub/text/the-spectre-bridegroom.xhtml
+++ b/src/epub/text/the-spectre-bridegroom.xhtml
@@ -10,7 +10,7 @@
 			<header>
 				<hgroup>
 					<h2 epub:type="title">The Spectre Bridegroom</h2>
-					<h3 epub:type="subtitle">A Traveller’s Tale<a href="endnotes.xhtml#note-24" id="noteref-24" epub:type="noteref">24</a></h3>
+					<p epub:type="subtitle">A Traveller’s Tale<a href="endnotes.xhtml#note-24" id="noteref-24" epub:type="noteref">24</a></p>
 				</hgroup>
 				<blockquote epub:type="epigraph z3998:poem">
 					<p>
