--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -472,7 +472,7 @@
 					</p>
 				</li>
 				<li id="note-51" epub:type="endnote">
-					<p>Bishop Earle, speaking of the country gentleman of his time, observes, “His housekeeping is seen much in the different families of dogs and serving-men attendant on their kennels; and the deepness of their throats is the depth of his discourse. A hawk he esteems the true burden of nobility, and is exceedingly ambitious to seem delighted with the sport, and have his fist gloved with his jesses.” And Gilpin, in his description of a <abbr>Mr.</abbr> Hastings, remarks, “He kept all sorts of hounds that run buck, fox, hare, otter, and badger; and had hawks of all kinds both long and short winged. His great hall was commonly strewed with marrowbones, and full of hawk perches, hounds, spaniels, and terriers. On a broad hearth, paved with brick, lay some of the choicest terriers, hounds, and spaniels.” <a href="stratford-on-avon.xhtml#noteref-51" epub:type="backlink">↩</a></p>
+					<p>Bishop Earle, speaking of the country gentleman of his time, observes, “His housekeeping is seen much in the different families of dogs and serving-men attendant on their kennels; and the deepness of their throats is the depth of his discourse. A hawk he esteems the true burden of nobility, and is exceedingly ambitious to seem delighted with the sport, and have his fist gloved with his jesses.” And Gilpin, in his description of a <abbr epub:type="z3998:name-title">Mr.</abbr> Hastings, remarks, “He kept all sorts of hounds that run buck, fox, hare, otter, and badger; and had hawks of all kinds both long and short winged. His great hall was commonly strewed with marrowbones, and full of hawk perches, hounds, spaniels, and terriers. On a broad hearth, paved with brick, lay some of the choicest terriers, hounds, and spaniels.” <a href="stratford-on-avon.xhtml#noteref-51" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-52" epub:type="endnote">
 					<p>The <span epub:type="z3998:nationality">American</span> Government has been indefatigable in its exertions to ameliorate the situation of the <span epub:type="z3998:nationality">Indians</span>, and to introduce among them the arts of civilization and civil and religious knowledge. To protect them from the frauds of the white traders no purchase of land from them by individuals is permitted, nor is any person allowed to receive lands from them as a present without the express sanction of government. These precautions are strictly enforced. <a href="traits-of-indian-character.xhtml#noteref-52" epub:type="backlink">↩</a></p>
@@ -484,10 +484,10 @@
 					<p>Now <span epub:type="z3998:place">Bristol, Rhode Island</span>. <a href="philip-of-pokanoket.xhtml#noteref-54" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-55" epub:type="endnote">
-					<p>The <abbr>Rev.</abbr> Increase Mather’s <i epub:type="se:name.publication.book">History</i>. <a href="philip-of-pokanoket.xhtml#noteref-55" epub:type="backlink">↩</a></p>
+					<p>The <abbr epub:type="z3998:name-title">Rev.</abbr> Increase Mather’s <i epub:type="se:name.publication.book">History</i>. <a href="philip-of-pokanoket.xhtml#noteref-55" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-56" epub:type="endnote">
-					<p><abbr>MS.</abbr> of the <abbr>Rev.</abbr> <abbr epub:type="z3998:given-name">W.</abbr> Ruggles. <a href="philip-of-pokanoket.xhtml#noteref-56" epub:type="backlink">↩</a></p>
+					<p><abbr>MS.</abbr> of the <abbr epub:type="z3998:name-title">Rev.</abbr> <abbr epub:type="z3998:given-name">W.</abbr> Ruggles. <a href="philip-of-pokanoket.xhtml#noteref-56" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-57" epub:type="endnote">
 					<p>From this same treatise, it would appear that angling is a more industrious and devout employment than it is generally considered.⁠—“For when ye purpose to go on your disportes in fishynge ye will not desyre greatlye many persons with you, which might let you of your game. And that ye may serve God devoutly in saying effectually your customable prayers. And thus doying, ye shall eschew and also avoyde many vices, as ydelness, which is principall cause to induce man to many other vices, as it is right well known.” <a href="the-angler.xhtml#noteref-57" epub:type="backlink">↩</a></p>
