--- a/src/epub/text/rural-funerals.xhtml
+++ b/src/epub/text/rural-funerals.xhtml
@@ -103,7 +103,7 @@
 				</p>
 			</blockquote>
 			<p>The white rose, we are told, was planted at the grave of a virgin; her chaplet was tied with white ribbons, in token of her spotless innocence, though sometimes black ribbons were intermingled, to bespeak the grief of the survivors. The red rose was occasionally used, in remembrance of such as had been remarkable for benevolence; but roses in general were appropriated to the graves of lovers. Evelyn tells us that the custom was not altogether extinct in his time, near his dwelling in the county of <span epub:type="z3998:place">Surrey</span>, “where the maidens yearly planted and decked the graves of their defunct sweethearts with rosebushes.” And Camden likewise remarks, in his <i epub:type="se:name.publication.book">Britannia</i>: “Here is also a certain custom, observed time out of mind, of planting rose-trees upon the graves, especially by the young men and maids who have lost their loves; so that this churchyard is now full of them.”</p>
-			<p>When the deceased had been unhappy in their loves, emblems of a more gloomy character were used, such as the yew and cypress, and if flowers were strewn, they were of the most melancholy colors. Thus, in poems by Thomas Stanley, <abbr>Esq.</abbr> (published in 1651), is the following stanza:</p>
+			<p>When the deceased had been unhappy in their loves, emblems of a more gloomy character were used, such as the yew and cypress, and if flowers were strewn, they were of the most melancholy colors. Thus, in poems by Thomas Stanley, <abbr epub:type="z3998:name-title">Esq.</abbr> (published in 1651), is the following stanza:</p>
 			<blockquote epub:type="z3998:poem">
 				<p>
 					<span class="i7">Yet strew</span>
