[Editorial] Modernize title

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -20,7 +20,7 @@
 					<a href="text/preface.xhtml">Preface to the Revised Edition</a>
 				</li>
 				<li>
-					<a href="text/halftitlepage.xhtml">The Sketch-Book of Geoffrey Crayon, <abbr class="eoc">Gent.</abbr></a>
+					<a href="text/halftitlepage.xhtml">The Sketchbook of Geoffrey Crayon, <abbr class="eoc">Gent.</abbr></a>
 					<ol>
 						<li>
 							<a href="text/the-authors-account-of-himself.xhtml">The Author’s Account of Himself</a>
@@ -141,7 +141,7 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/the-authors-account-of-himself.xhtml" epub:type="bodymatter">The Sketch-Book of Geoffrey Crayon, Gent.</a>
+					<a href="text/the-authors-account-of-himself.xhtml" epub:type="bodymatter">The Sketchbook of Geoffrey Crayon, Gent.</a>
 				</li>
 				<li>
 					<a href="text/endnotes.xhtml" epub:type="backmatter endnotes">Endnotes</a>
