--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -11,7 +11,7 @@
 				<h2 epub:type="title">Colophon</h2>
 				<img alt="The Standard Ebooks logo." src="../images/logo.svg" epub:type="z3998:publisher-logo se:image.color-depth.black-on-transparent"/>
 			</header>
-			<p><i epub:type="se:name.publication.book">The Sketch-Book of Geoffrey Crayon, <abbr>Gent.</abbr></i><br/>
+			<p><i epub:type="se:name.publication.book">The Sketchbook of Geoffrey Crayon, <abbr>Gent.</abbr></i><br/>
 			was published in 1820 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Washington_Irving">Washington Irving</a>.</p>
 			<p>This ebook was produced for<br/>
@@ -35,7 +35,7 @@
 			<p>The first edition of this ebook was released on<br/>
 			<b>February 12, 2018, 6:10 <abbr class="eoc">a.m.</abbr></b><br/>
 			You can check for updates to this ebook, view its revision history, or download it for different ereading systems at<br/>
-			<a href="https://standardebooks.org/ebooks/washington-irving/the-sketch-book-of-geoffrey-crayon-gent">standardebooks.org/ebooks/washington-irving/the-sketch-book-of-geoffrey-crayon-gent</a>.</p>
+			<a href="https://standardebooks.org/ebooks/washington-irving/the-sketchbook-of-geoffrey-crayon-gent">standardebooks.org/ebooks/washington-irving/the-sketchbook-of-geoffrey-crayon-gent</a>.</p>
 			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org">standardebooks.org</a>.</p>
 		</section>
 	</body>
