--- a/src/epub/text/titlepage.xhtml
+++ b/src/epub/text/titlepage.xhtml
@@ -7,7 +7,7 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="titlepage" epub:type="titlepage">
-			<h1 epub:type="title">The Sketch-Book of Geoffrey Crayon, <abbr class="eoc">Gent.</abbr></h1>
+			<h1 epub:type="title">The Sketchbook of Geoffrey Crayon, <abbr class="eoc">Gent.</abbr></h1>
 			<p>By <b epub:type="z3998:personal-name z3998:author">Washington Irving</b>.</p>
 			<img alt="" src="../images/titlepage.svg" epub:type="se:image.color-depth.black-on-transparent"/>
 		</section>
