Add 'role="presentation"' to headers and footers in blockquotes

--- a/src/epub/text/preface.xhtml
+++ b/src/epub/text/preface.xhtml
@@ -14,7 +14,7 @@
 				<p epub:type="z3998:salutation">My Dear Sir⁠—</p>
 				<p>I entreat you to believe that I feel truly obliged by your kind intentions towards me, and that I entertain the most unfeigned respect for your most tasteful talents. My house is completely filled with workpeople at this time, and I have only an office to transact business in; and yesterday I was wholly occupied, or I should have done myself the pleasure of seeing you.</p>
 				<p>If it would not suit me to engage in the publication of your present work, it is only because I do not see that scope in the nature of it which would enable me to make those satisfactory accounts between us, without which I really feel no satisfaction in engaging⁠—but I will do all I can to promote their circulation, and shall be most ready to attend to any future plan of yours.</p>
-				<footer>
+				<footer role="presentation">
 					<p epub:type="z3998:valediction">With much regard, I remain, dear sir,<br/>
 					Your faithful servant,<br/>
 					<span epub:type="z3998:signature">John Murray</span>.</p>
