--- a/src/epub/text/preface.xhtml
+++ b/src/epub/text/preface.xhtml
@@ -5,7 +5,7 @@
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
-	<body epub:type="frontmatter z3998:fiction">
+	<body epub:type="frontmatter z3998:non-fiction">
 		<section id="preface" epub:type="preface">
 			<h2 epub:type="title">Preface to the Revised Edition</h2>
 			<p>The following papers, with two exceptions, were written in <span epub:type="z3998:place">England</span>, and formed but part of an intended series for which I had made notes and memorandums. Before I could mature a plan, however, circumstances compelled me to send them piecemeal to the <span epub:type="z3998:place">United States</span>, where they were published from time to time in portions or numbers. It was not my intention to publish them in <span epub:type="z3998:place">England</span>, being conscious that much of their contents could be interesting only to <span epub:type="z3998:nationality">American</span> readers, and, in truth, being deterred by the severity with which <span epub:type="z3998:nationality">American</span> productions had been treated by the <span epub:type="z3998:nationality">British</span> press.</p>
